Added title, meta tag and icon

--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%sveltekit.assets%/logo.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Discover CoffeeStyle - your ultimate destination for premium coffee and tea mugs! Explore our curated collection of stylish mugs crafted for coffee aficionados and tea lovers alike. Dive into our insightful blogs covering everything from coffee and tea culture to lifestyle tips. Join us at our locations in vibrant cities like LA and London, where you can experience the perfect blend of quality, style, and inspiration."
+    />
+
+    %sveltekit.head%
+  </head>
+  <body data-sveltekit-preload-data="hover">
+    <div style="display: contents">%sveltekit.body%</div>
+  </body>
 </html>
